--- a/frontend/src/components/Employer/PostProject/postProject.scss
+++ b/frontend/src/components/Employer/PostProject/postProject.scss
@@ -13,6 +13,9 @@
       .form-label{
         font-weight: bold;
       }
+      textarea{
+        height: 19vh;
+      }
     }
     .projectSum{
       ul{
@@ -21,6 +24,7 @@
         li{
           margin: .7rem 0;
           font-weight: 500;
+          width: 95%;
         }
         .skills ul{
           display: flex;
