--- a/frontend/src/components/Employer/EmNav/EmNav.scss
+++ b/frontend/src/components/Employer/EmNav/EmNav.scss
@@ -7,9 +7,11 @@
       width: 35px;
       border-radius: 50%;
       border: 2px solid gainsboro;
+      transition: 1S;
     }
     .nav-link{
       padding: 0 !important;
+      transition: 1S;
     }
     &:after{
      display: none !important;
