--- a/frontend/src/components/Header/Nav/nav.scss
+++ b/frontend/src/components/Header/Nav/nav.scss
@@ -1,3 +1,34 @@
-.navbar-collapse {
-  flex-grow: 0 !important;
+@import '../../../assets/style/variables.scss';
+
+.navbar {
+  background-color: $primary !important; //
+  .navbar-brand{
+    color: $amber !important;
+  }
+  .nav-link{
+    .icon{
+      color: $amber;
+    }
+    span{
+      color: #f1f1f1;
+    }
+    span:hover{
+      color: $amber;
+    }
+  }
+  .navbar-nav{
+    .btn{ 
+      border-color: $secondary;
+      transition: .3s;
+    }
+    .btn:hover{
+      background-color: $secondary !important;
+      color: $primary !important;
+      border-color: $amber;
+    }
+  }
+  .navbar-collapse {
+    flex-grow: 0 !important;
+  }
 }
+
