--- a/frontend/src/components/signup/signup.css
+++ b/frontend/src/components/signup/signup.css
@@ -1,1 +1,31 @@
-/* No CSS *//*# sourceMappingURL=signup.css.map */
+.type .form-check-input {
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+
+.type .form-check-input:checked + .form-check-label {
+  border-width: 1.4px;
+  -webkit-box-shadow: 0 .125rem .25rem #00000013;
+          box-shadow: 0 .125rem .25rem #00000013;
+  background-color: rgba(42, 49, 70, 0.4);
+}
+
+.type .form-check-label {
+  width: 85px;
+  height: 87px;
+  border: 1.3px solid #2b3247;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: .75rem;
+  font-weight: 500;
+  text-align: center;
+  -webkit-transition: .5s;
+  transition: .5s;
+}
+
+.type .form-check-label img {
+  width: 60px;
+  height: 60px;
+}
+/*# sourceMappingURL=signup.css.map */
