--- a/frontend/src/components/home/categories/categories.scss
+++ b/frontend/src/components/home/categories/categories.scss
@@ -3,21 +3,20 @@
 .categories{
   color: $primary !important;
   h4{
-    // position: relative;
+    position: relative;
     width: fit-content;
-    // z-index : 1;
-    border-color: $amber !important;
-    border-width: 2px !important;
-    
-    // &:before {
-    //   content : "";
-    //   position: absolute;
-    //   left    : 0;
-    //   bottom  : 0;
-    //   height  : 1px;
-    //   width   : 50%;
-    //   border-bottom: 3px solid $amber;
-    // } 
+    z-index : 1;
+    // border-color: $amber !important;
+    // border-width: 2px !important;
+    &:before {
+      content : "";
+      position: absolute;
+      left    : 15%;
+      bottom  : 0;
+      height  : 1px;
+      width   : 70%;
+      border-bottom: 3px solid $amber;
+    } 
   }
   .categories-content{
     min-height: 60vh;
