--- a/frontend/src/components/Employer/PostProject/postProject.scss
+++ b/frontend/src/components/Employer/PostProject/postProject.scss
@@ -1,3 +1,5 @@
+@import '../../../assets/style/variables.scss'; 
+
 .modal-dialog{
   margin-right: 15vw !important;
   margin-left: 15vw !important;
@@ -15,6 +17,29 @@
       }
       textarea{
         height: 19vh;
+      }
+      .skills-input:focus + .skills, .skills-input:invalid + .skills{
+        display: block;
+      }
+      .skills{
+        display: none;
+        top: 38px !important;
+        width: 75% !important;
+        height: 150px !important;
+        overflow-y: scroll !important;
+        cursor: pointer;
+        transition: 2s !important;
+        z-index: 2;
+        &:hover{
+          display: none;
+        }
+        &::-webkit-scrollbar-track {
+          background: #e9ecef;
+        }
+        .skill{
+          background-color: #e9ecef !important;
+          color: $primary !important;
+        }
       }
     }
     .projectSum{
