--- a/frontend/src/components/Header/Nav/nav.scss
+++ b/frontend/src/components/Header/Nav/nav.scss
@@ -1,30 +1,34 @@
 @import '../../../assets/style/variables.scss';
 
-.navbar {
+.main-nav {
   background-color: $primary !important; //
+  border-bottom: 2px solid $amber !important;
   .navbar-brand{
     color: $amber !important;
   }
   .nav-link{
-    .icon{
-      color: $amber;
-    }
-    span{
-      color: #f1f1f1;
-    }
-    span:hover{
-      color: $amber;
+    color: #f1f1f1 !important;
+    // .icon{
+    //   color: $amber;
+    // }
+    // span{
+    //   color: #f1f1f1;
+    // }
+    &:hover{
+      color: $amber !important;
     }
   }
+  .active{
+    color: $amber !important;
+  }
   .navbar-nav{
-    .btn{ 
+    .btn, .btn-primary{ 
       border-color: $secondary;
-      transition: .3s;
-    }
-    .btn:hover{
-      background-color: $secondary !important;
-      color: $primary !important;
-      border-color: $amber;
+      transition: .4s;
+      &:hover{
+        background-color: $secondary !important;
+        color: $primary !important;
+      }
     }
   }
   .navbar-collapse {
