--- a/frontend/src/components/home/Banner/Banner.css
+++ b/frontend/src/components/home/Banner/Banner.css
@@ -15,6 +15,9 @@
 }
 
 .jumbotron .b-search .btn {
+  background-color: #ffc107 !important;
+  color: #2b3247 !important;
+  border-color: #2b3247 !important;
   border-radius: 0 5px 5px 0;
   height: 3rem;
   min-width: -webkit-fit-content;
@@ -24,8 +27,7 @@
 }
 
 .jumbotron .b-search .btn:hover {
-  background-color: #ffc107 !important;
-  color: #2b3247 !important;
-  border-color: #2b3247 !important;
+  background-color: #2b3247 !important;
+  color: #dadada !important;
 }
 /*# sourceMappingURL=Banner.css.map */
