--- a/frontend/src/components/Employer/PostProject/postProject.css
+++ b/frontend/src/components/Employer/PostProject/postProject.css
@@ -6,11 +6,10 @@
 
 .modal-dialog .modal-content {
   width: 70vw !important;
-  height: 93VH !important;
 }
 
 .modal-dialog .modal-content .modal-body {
-  height: 70vh;
+  max-height: 70vh;
   padding-right: 5%;
   padding-left: 5%;
   overflow: auto;
@@ -24,15 +23,10 @@
   height: 19vh;
 }
 
-.modal-dialog .modal-content .modal-body .skills-input:focus + .skills, .modal-dialog .modal-content .modal-body .skills-input:invalid + .skills {
-  display: block;
-}
-
-.modal-dialog .modal-content .modal-body .skills {
-  display: none;
+.modal-dialog .modal-content .modal-body .skills-list {
   top: 38px !important;
   width: 75% !important;
-  height: 150px !important;
+  max-height: 150px !important;
   overflow-y: scroll !important;
   cursor: pointer;
   -webkit-transition: 2s !important;
@@ -40,15 +34,11 @@
   z-index: 2;
 }
 
-.modal-dialog .modal-content .modal-body .skills:hover {
-  display: none;
-}
-
-.modal-dialog .modal-content .modal-body .skills::-webkit-scrollbar-track {
+.modal-dialog .modal-content .modal-body .skills-list::-webkit-scrollbar-track {
   background: #e9ecef;
 }
 
-.modal-dialog .modal-content .modal-body .skills .skill {
+.modal-dialog .modal-content .modal-body .skills-list .skill {
   background-color: #e9ecef !important;
   color: #2b3247 !important;
 }
