--- a/frontend/src/components/Employer/ProjectPreview/ProjectPreview.scss
+++ b/frontend/src/components/Employer/ProjectPreview/ProjectPreview.scss
@@ -2,8 +2,12 @@
   ul{
     padding: 0;
     list-style: none;
+    .ellipsis{
+      white-space: nowrap; 
+      overflow: hidden;
+      text-overflow: ellipsis; 
+    }
     li{
-
       .skills{
         display: flex;
         flex-wrap: wrap;
