--- a/frontend/src/assets/style/index.scss
+++ b/frontend/src/assets/style/index.scss
@@ -42,6 +42,11 @@ code {
   background: #555; 
 }
 
+.page-title{
+  border-left: 3px solid $amber;
+  color: $primary !important;
+}
+
 .btn, .btn-primary { 
   background-color: $primary !important;
   border-width: 1.4px;
@@ -62,6 +67,11 @@ code {
   }
 }
 
+.link{
+  text-decoration: none !important;
+  color: $primary !important;
+}
+
 .form-control{
   border-color: $primary !important;
   outline-color: $amber !important;
@@ -72,4 +82,21 @@ code {
   &::placeholder{
     color: $primary !important;
   }
+}
+
+.hover-shadow{
+  &:hover{
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.15) !important;
+    // border-color: $primary !important;
+  }
+}
+
+.icon-hover{
+  &:hover{
+    color: red;
+  }
+}
+
+.pointer{
+  cursor: pointer;
 }
