--- a/frontend/src/components/Freelancer/FrNav/FrNav.scss
+++ b/frontend/src/components/Freelancer/FrNav/FrNav.scss
@@ -5,6 +5,10 @@
   border-bottom: 2px solid $amber !important;
   .navbar-brand{
     color: $amber !important;
+    a{
+      text-decoration: none !important;
+      color: inherit;
+    }
   }
   .btn, .btn-primary{ 
     border-color: $secondary;
@@ -16,6 +20,10 @@
     &:active{
       background-color: $secondary !important;
       color: $primary !important;
+    }
+    a{
+      text-decoration: none !important;
+      color: inherit;
     }
   }
   .dropdown {
@@ -48,7 +56,7 @@
     }  
     .dropdown-menu{
       top: 110% !important;
-      left: -80% !important;
+      left: -110px !important;
       .dropdown-item{
         padding: .25rem .80rem !important;
       }
